// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSCAPPolicy expect to render without error 1`] = `
<Fragment>
  <TextContent>
    <Text
      className="pf-u-mb-md"
      component="h1"
    >
      Create SCAP policy
    </Text>
    <Text
      className="pf-u-mb-md"
    >
      Select the operating system and policy type for this policy.
    </Text>
  </TextContent>
  <Form>
    <FormGroup
      fieldId="benchmark"
      isRequired={true}
      label="Operating system"
    />
    <FormGroup
      fieldId="policy-type"
      isRequired={true}
      label="Policy type"
      labelIcon={<PolicyTooltip />}
    >
      <ProfileTypeSelect
        onChange={[Function]}
        onClick={[Function]}
        profiles={Array []}
      />
    </FormGroup>
  </Form>
</Fragment>
`;

exports[`CreateSCAPPolicy should render a spinner while loading 1`] = `<Spinner />`;

exports[`CreateSCAPPolicy should render benchmarks and no policies until one is selected 1`] = `
<Fragment>
  <TextContent>
    <Text
      className="pf-u-mb-md"
      component="h1"
    >
      Create SCAP policy
    </Text>
    <Text
      className="pf-u-mb-md"
    >
      Select the operating system and policy type for this policy.
    </Text>
  </TextContent>
  <Form>
    <FormGroup
      fieldId="benchmark"
      isRequired={true}
      label="Operating system"
    >
      <Tile
        className="pf-u-mr-md"
        isSelected={false}
        isStacked={true}
        key="a5e7f1ea-e63c-40be-a17a-c2a247c11e10"
        onClick={[Function]}
        title="RHEL 6"
      />
      <Tile
        className="pf-u-mr-md"
        isSelected={false}
        isStacked={true}
        key="f1dff140-6649-4060-b0f6-7b1548f9e901"
        onClick={[Function]}
        title="RHEL 7"
      />
      <Tile
        className="pf-u-mr-md"
        isSelected={false}
        isStacked={true}
        key="bdcc6b37-1d4a-489a-a38d-e9be7aef7051"
        onClick={[Function]}
        title="RHEL 7"
      />
      <Tile
        className="pf-u-mr-md"
        isSelected={false}
        isStacked={true}
        key="6a02b217-c9e9-4a4d-93a9-c77b5ea7967a"
        onClick={[Function]}
        title="RHEL 8"
      />
    </FormGroup>
    <FormGroup
      fieldId="policy-type"
      isRequired={true}
      label="Policy type"
      labelIcon={<PolicyTooltip />}
    >
      <ProfileTypeSelect
        onChange={[Function]}
        onClick={[Function]}
        profiles={Array []}
      />
    </FormGroup>
  </Form>
</Fragment>
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 1`] = `
Array [
  <div
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 6
      </div>
    </div>
  </div>,
  <div
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 7
      </div>
    </div>
  </div>,
  <div
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 7
      </div>
    </div>
  </div>,
  <div
    className="pf-c-tile pf-u-mr-md"
    onClick={[Function]}
    tabIndex={0}
  >
    <div
      className="pf-c-tile__header pf-m-stacked"
    >
      <div
        className="pf-c-tile__title"
      >
        RHEL 8
      </div>
    </div>
  </div>,
]
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 2`] = `
<ProfileTypeSelect
  onChange={[Function]}
  onClick={[Function]}
  profiles={Array []}
/>
`;
